Port to 1.20.1 and Format codes